--- a/restapi/package.json
+++ b/restapi/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "express-prom-bundle": "^6.6.0",
     "express-validator": "^6.14.2",
+    "mongodb": "^5.0.1",
     "prom-client": "^14.1.1"
   },
   "devDependencies": {
