--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ node_modules
 
 # testing
 webapp/coverage
-restapi/coverage
+restapi_deprecated/coverage
 
 # production
 webapp/build
@@ -29,3 +29,7 @@ yarn-error.log*
 #documentation build does not go into master
 docs/build
 
+/restapi/build/
+/restapi/package-lock.json
+/restapi_deprecated/
+/restapi/src/.env
