--- a/restapi/package.json
+++ b/restapi/package.json
@@ -1,33 +1,25 @@
 {
   "name": "restapi",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev ./server.ts",
-    "test": "cd tests && jest --runInBand"
+    "dev": "ts-node-dev src/server.ts",
+    "start": "node build/server.js",
+    "tsc": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "express": "^4.18.2",
-    "express-prom-bundle": "^6.6.0",
-    "express-validator": "^6.14.2",
-    "mongodb": "^5.0.1",
-    "prom-client": "^14.1.1"
-  },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15",
-    "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.18",
-    "@types/supertest": "^2.0.12",
-    "jest": "^29.3.1",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.4",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "@types/express": "4.17.17",
+    "ts-node-dev": "2.0.0",
+    "typescript": "4.9.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "4.18.2",
+    "mongodb": "5.0.1"
   }
 }
