--- a/restapi/package.json
+++ b/restapi/package.json
@@ -14,11 +14,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "4.17.17",
+    "@types/body-parser": "1.19.2",
+    "@types/cookie-parser": "1.4.3",
+    "@types/express-session": "1.17.6",
     "ts-node-dev": "2.0.0",
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "@inrupt/solid-client": "1.25.2",
+    "@inrupt/solid-client-authn-node": "1.13.2",
+    "@inrupt/vocab-common-rdf": "1.0.5",
+    "cookie-parser": "1.4.6",
+    "dotenv": "16.0.3",
     "express": "4.18.2",
     "mongodb": "5.0.1"
   }
