--- a/restapi/package.json
+++ b/restapi/package.json
@@ -21,12 +21,13 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@inrupt/solid-client": "1.25.2",
+    "@inrupt/solid-client": "^1.25.2",
     "@inrupt/solid-client-authn-node": "1.13.2",
     "@inrupt/vocab-common-rdf": "1.0.5",
     "cookie-parser": "1.4.6",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "5.0.1"
   }
 }
