--- a/restapi/package.json
+++ b/restapi/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@types/body-parser": "1.19.2",
     "@types/express": "4.17.17",
+    "@types/cors": "2.8.13",
+    "@types/cookie-session": "2.0.44",
     "ts-node-dev": "2.0.0",
     "typescript": "4.9.5"
   },
@@ -22,8 +24,8 @@
     "@inrupt/solid-client": "1.25.2",
     "@inrupt/solid-client-authn-node": "1.13.2",
     "@inrupt/vocab-common-rdf": "1.0.5",
-    "@types/cookie-session": "2.0.44",
     "cookie-session": "2.0.0",
+    "cors": "2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
     "mongodb": "5.0.1"
