--- a/restapi/package.json
+++ b/restapi/package.json
@@ -14,9 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/body-parser": "1.19.2",
-    "@types/express": "4.17.17",
     "@types/cors": "2.8.13",
-    "@types/cookie-session": "2.0.44",
+    "@types/express": "4.17.17",
     "ts-node-dev": "2.0.0",
     "typescript": "4.9.5"
   },
@@ -24,10 +23,13 @@
     "@inrupt/solid-client": "1.25.2",
     "@inrupt/solid-client-authn-node": "1.13.2",
     "@inrupt/vocab-common-rdf": "1.0.5",
-    "cookie-session": "2.0.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express-session": "^1.17.6",
+    "cookie-parser": "^1.4.6",
     "cors": "2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "5.0.1"
   }
 }
