--- a/webapp/package.json
+++ b/webapp/package.json
@@ -63,7 +63,7 @@
     "react-scripts": "5.0.0",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "^29.0.4",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
     "@types/leaflet": "^1.9.1"
   }
 }
