--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -55,6 +56,7 @@
     "@types/expect-puppeteer": "^4.4.7",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
+    "@types/leaflet": "^1.9.1",
     "@types/puppeteer": "^5.4.4",
     "expect-puppeteer": "^6.0.2",
     "jest-cucumber": "^3.0.1",
@@ -63,7 +65,6 @@
     "react-scripts": "5.0.0",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "^29.0.4",
-    "ts-node-dev": "^2.0.0",
-    "@types/leaflet": "^1.9.1"
+    "ts-node-dev": "^2.0.0"
   }
 }
