--- a/.github/workflows/lomap_en1b.yml
+++ b/.github/workflows/lomap_en1b.yml
@@ -2,65 +2,18 @@ name: CI for LOMAP_EN1B
 
 on:
   release:
-    types: [published]
+    types: [pull_request]
 
 jobs:
-  unit-test-webapp:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: webapp
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    - run: npm ci
-    - run: npm test --coverage --watchAll
-    - name: Analyze with SonarCloud
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  unit-test-restapi:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: restapi
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    - run: npm ci
-    - run: npm test --coverage --watchAll
-    - name: Analyze with SonarCloud
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  e2e-tests:
-    needs: [unit-test-webapp, unit-test-restapi]
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    - run: npm --prefix webapp install
-    - run: npm --prefix restapi install
-    - run: npm --prefix webapp run build
-    - run: npm --prefix webapp run test:e2e
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v3
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       env:
-        API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
+        API_URI: http://${{ secrets.DEPLOY_HOST }}:8082/api
       with:
           name: arquisoft/lomap_en1b/webapp
           username: ${{ github.actor }}
@@ -71,7 +24,6 @@ jobs:
   docker-push-restapi:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
-    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v3
     - name: Publish to Registry
@@ -82,6 +34,7 @@ jobs:
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: restapi
+
   # deploy:
   #   name: Deploy over SSH
   #   runs-on: ubuntu-latest
