--- a/.github/workflows/lomap_en1b.yml
+++ b/.github/workflows/lomap_en1b.yml
@@ -2,7 +2,7 @@ name: CI for LOMAP_EN1B
 
 on:
   release:
-    types: [pull_request]
+    types: [push]
 
 jobs:
   docker-push-webapp:
@@ -21,6 +21,7 @@ jobs:
           registry: ghcr.io
           workdir: webapp
           buildargs: API_URI
+
   docker-push-restapi:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
@@ -34,21 +35,20 @@ jobs:
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: restapi
-
-  # deploy:
-  #   name: Deploy over SSH
-  #   runs-on: ubuntu-latest
-  #   needs: [docker-push-restapi,docker-push-webapp]
-  #   steps:
-  #   - name: Deploy over SSH
-  #     uses: fifsky/ssh-action@master
-  #     with:
-  #       host: ${{ secrets.DEPLOY_HOST }}
-  #       user: ${{ secrets.DEPLOY_USER }}
-  #       key: ${{ secrets.DEPLOY_KEY }}
-  #       command: |
-  #         wget https://raw.githubusercontent.com/arquisoft/lomap_en1b/master/docker-compose-deploy.yml -O docker-compose.yml
-  #         docker-compose stop
-  #         docker-compose rm -f
-  #         docker-compose pull   
-  #         docker-compose up -d
+  deploy:
+    name: Deploy over SSH
+    runs-on: ubuntu-latest
+    needs: [ docker-push-restapi,docker-push-webapp ]
+    steps:
+      - name: Deploy over SSH
+        uses: fifsky/ssh-action@master
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          user: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          command: |
+            wget https://raw.githubusercontent.com/arquisoft/lomap_en1b/master/docker-compose-deploy.yml -O docker-compose.yml
+            docker-compose stop
+            docker-compose rm -f
+            docker-compose pull   
+            docker-compose up -d
