--- a/.github/workflows/lomap_en1b.yml
+++ b/.github/workflows/lomap_en1b.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       env:
-        API_URI: http://${{ secrets.DEPLOY_HOST }}:8082/api
+        API_URI: http://${{ secrets.DEPLOY_HOST }}:8082
       with:
           name: arquisoft/lomap_en1b/webapp
           username: ${{ github.actor }}
@@ -34,20 +34,4 @@ jobs:
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
           workdir: restapi
-  deploy:
-    name: Deploy over SSH
-    runs-on: ubuntu-latest
-    needs: [ docker-push-restapi,docker-push-webapp ]
-    steps:
-      - name: Deploy over SSH
-        uses: fifsky/ssh-action@master
-        with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          user: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_KEY }}
-          command: |
-            wget https://raw.githubusercontent.com/arquisoft/lomap_en1b/master/docker-compose-deploy.yml -O docker-compose.yml
-            docker-compose stop
-            docker-compose rm -f
-            docker-compose pull   
-            docker-compose up -d
+
