--- a/.github/workflows/lomap_en1b.yml
+++ b/.github/workflows/lomap_en1b.yml
@@ -14,7 +14,7 @@ jobs:
       env:
         API_URI: http://${{ secrets.DEPLOY_HOST }}:8082
       with:
-          name: arquisoft/lomap_en1b/webapp
+          name: arquisoft/lomap_en1b/webapp:latest
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
@@ -29,7 +29,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-          name: arquisoft/lomap_en1b/restapi
+          name: arquisoft/lomap_en1b/restapi:latest
           username: ${{ github.actor }}
           password: ${{ secrets.DOCKER_PUSH_TOKEN }}
           registry: ghcr.io
