--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.1"
+    "@types/leaflet": "^1.9.1",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0"
   }
 }
