--- a/restapi/Dockerfile
+++ b/restapi/Dockerfile
@@ -3,5 +3,6 @@ LABEL org.opencontainers.image.source https://github.com/Arquisoft/lomap_en1b
 COPY . /app
 WORKDIR /app
 #Install the dependencies
-RUN npm install
+RUN npm ci
+RUN npm run build
 CMD [ "npm", "start" ]
