--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-ratings-declarative": "^3.4.1",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
