--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,11 +16,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-ratings-declarative": "^3.4.1",
     "react-redux": "^8.0.5",
     "react-remove-scroll": "^2.5.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-star-ratings": "^2.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
