--- a/restapi/package.json
+++ b/restapi/package.json
@@ -31,6 +31,7 @@
     "dotenv": "16.0.3",
     "express": "4.18.2",
     "express-session": "^1.17.3",
-    "mongodb": "5.0.1"
+    "mongodb": "5.0.1",
+    "mongoose": "^7.0.3"
   }
 }
