--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ restapi/coverage
 
 # production
 webapp/build
+restapi/build
 
 # misc
 .DS_Store
@@ -29,7 +30,6 @@ yarn-error.log*
 #documentation build does not go into master
 docs/build
 
-/restapi/build/
 /restapi/package-lock.json
 /restapi_deprecated/
 /restapi/src/.env
