--- a/webapp/package.json
+++ b/webapp/package.json
@@ -63,6 +63,7 @@
     "expect-puppeteer": "^6.0.2",
     "jest-cucumber": "^3.0.1",
     "jest-puppeteer": "^6.0.3",
+    "msw": "^1.2.1",
     "puppeteer": "^13.0.1",
     "react-scripts": "5.0.0",
     "start-server-and-test": "^1.14.0",
