--- a/restapi/package.json
+++ b/restapi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "restapi",
   "version": "1.0.0",
-  "description": "",
+  "description": "First stable version with all mandatory functionality implemented",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
