--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!react-leaflet)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -67,7 +67,7 @@
     "puppeteer": "^13.0.1",
     "react-scripts": "5.0.0",
     "start-server-and-test": "^1.14.0",
-    "ts-jest": "^29.0.4",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0"
   }
 }
