--- a/.github/workflows/lomap_en1b.yml
+++ b/.github/workflows/lomap_en1b.yml
@@ -1,15 +1,66 @@
 name: CI/CD for LOMAP_EN1B
 
 on:
-  [pull_request, push]
+  release:
+    types: [ published ]
 
 env:
   DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
 
 jobs:
+  unit-test-webapp:
+    name: Jest test of React app
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: webapp
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: npm ci
+      - run: npm test --coverage --watchAll
+      - name: Analyze with SonarCloud
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    unit-test-restapi:
+      name: Jest test of RestAPI
+      runs-on: ubuntu-latest
+      defaults:
+        run:
+          working-directory: restapi
+      steps:
+        - uses: actions/checkout@v3
+        - uses: actions/setup-node@v3
+          with:
+            node-version: 16
+        - run: npm ci
+        - run: npm test --coverage --watchAll
+        - name: Analyze with SonarCloud
+          uses: sonarsource/sonarcloud-github-action@master
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    e2e-tests:
+      needs: [ unit-test-webapp, unit-test-restapi ]
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - uses: actions/setup-node@v3
+          with:
+            node-version: 18
+        - run: npm --prefix webapp install
+        - run: npm --prefix restapi install
+        - run: npm --prefix webapp run build
+        - run: npm --prefix webapp run test:e2e
+
   docker-push-webapp:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
+    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v3
     - name: Publish to Registry
@@ -35,6 +86,7 @@ jobs:
   docker-push-restapi:
     name: Push restapi Docker Image to GitHub Packages
     runs-on: ubuntu-latest
+    needs: [e2e-tests]
     steps:
     - uses: actions/checkout@v3
     - name: Publish to Registry
