--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,7 +31,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!react-leaflet)/\"",
+    "test": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!react-leaflet)/\"",
+    "test:e2e": "start-server-and-test 'npm --prefix ../restapi start' http://localhost:5000/api/users/list prod 3000 'cd e2e && jest'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
