--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!react-leaflet)/\"",
+    "test": "react-scripts test --coverage --watchAll=false --transformIgnorePatterns \"node_modules/(?!react-leaflet)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
