Scale to sudo to access docker

--- a/.github/workflows/lomap_en1b.yml
+++ b/.github/workflows/lomap_en1b.yml
@@ -116,6 +116,7 @@ jobs:
           user: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_KEY }}
           command: |
+            sudo su
             wget https://raw.githubusercontent.com/arquisoft/lomap_en1b/master/docker-compose-deploy.yml -O docker-compose.yml
             docker compose stop
             docker compose rm -f
