--- a/restapi/package.json
+++ b/restapi/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "start": "node build/server.js",
+    "start": "node build/src/server.js",
     "tsc": "tsc",
     "test": "jest"
   },
