--- a/.github/workflows/lomap_en1b.yml
+++ b/.github/workflows/lomap_en1b.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      - run: npm test --coverage --watchAll
+      - run: npm run test
       - name: Analyze with SonarCloud
         uses: sonarsource/sonarcloud-github-action@master
         env:
